update content (alert not keyword) in  reserved_keywords.html

--- a/html/reserved_keywords.html
+++ b/html/reserved_keywords.html
@@ -169,6 +169,20 @@
                             </ol>
                     </ol>
                 </article>
+                <article>
+                    <h1 class="count">Chat GPT and Alert</h1>
+                    <ol>
+                        <li>
+                            No, alert is not a good idea to use as a variable name in JavaScript, <strong>even though it
+                                is technically allowed</strong>
+                        <li>
+                            Technically valid: alert is not a reserved keyword, so you can declare it as a
+                            variable
+                        <li>
+                            But not recommended: alert is the name of a built-in browser function used to show popup
+                            messages
+                    </ol>
+                </article>
 
                 <article>
                     <h1 class="count">Code Example</h1>
