add ecollege exam question to nested_if.html

--- a/html/nested_if.html
+++ b/html/nested_if.html
@@ -561,32 +561,6 @@ TTT</pre><!-- wide-view -->
 
         </article>
 
-        <article>
-          <h1 class="count">Code Example</h1>
-          <details open><!--details CODE-->
-            <summary class="details-code-summary">[JavaScript Inserts]</summary>
-            <pre class="details-code-aclass">
-INSERT CODE THREE
-  </pre><!-- code-content -->
-          </details><!--details CODE-->
-
-          <br class="small-view">
-          <br class="wide-view">
-
-          <details open><!--Details CONSOLE -->
-            <summary class="details-console-summary">
-              [JavaScript Inserts]
-            </summary>
-            <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-</pre><!-- small-view -->
-            <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-</pre><!-- wide-view -->
-          </details><!--details CONSOLE -->
-
-        </article>
-        <!--here-->
 
         <article>
           <h1 class="count">SUMMARY</h1>
@@ -599,6 +573,47 @@ INSERT CONSOLE OUTPUT THREE (wide view)
           </ol>
 
         </article>
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
+var gottaDate=true;
+var gottaTwoTickets = false;
+var outputMessage = "";
+
+
+if(gottaFreeNight) {
+    if(gottaDate) {
+        if(gottaTwoTickets) {
+            outputMessage ="Have a great time at the concert";
+        } else {
+           outputMessage = "You dont have two tickets"
+        }
+    } else { 
+            outputMessage = "Bad Luck! you don't have a date";
+    }
+  } else {
+     outputMessage = "You are already busy that night"
+}
+</pre><!-- code-content -->
+          </details><!--details CODE-->
+
+          <br class="small-view">
+          <br class="wide-view">
+
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
+'You dont have two tickets' </pre><!-- small-view -->
+            <pre class="details-console-aclass wide-view">
+'You dont have two tickets' </pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
+
+        </article>
+        <!--here-->
 
         <article>
           <h1 class="count refs-heading">References</h1>
