--- a/html/isnan.html
+++ b/html/isnan.html
@@ -484,7 +484,7 @@ false
 
 // The space inside the digits makes it invalid 
    syntax for a number 
-   
+
   (unlike spaces around a number, which are allowed)
 
 // Since "123 456" doesn't match a numeric literal format, 
@@ -514,8 +514,9 @@ false
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-INSERT CODE THREE
-  </pre><!-- code-content -->
+isNaN(0/0)
+Number.isNaN(0/0)
+0/0</pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
@@ -526,12 +527,13 @@ INSERT CODE THREE
               [JavaScript Inserts]
             </summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-</pre><!-- small-view -->
+true
+true
+true </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-</pre><!-- wide-view -->
-          </details><!--details CONSOLE -->
+true
+true
+true </pre><!-- wide-view --> </details><!--details CONSOLE -->
 
         </article>
         <!--here-->
