update content in isnan.html

--- a/html/isnan.html
+++ b/html/isnan.html
@@ -87,6 +87,8 @@
             <li>
               If the result is <code>NaN</code>, it returns <code>true</code>
               Otherwise, it returns <code>false</code>
+              <br>
+              <br>
               <pre class="details-code-aclass">
 isNaN(42); // false (42 is a number)
 
@@ -112,6 +114,7 @@ isNaN(null); // false (null → 0)
               To check for <code>NaN</code> without this coercion, use <code>Number.isNaN()</code> instead
           </ol>
         </article>
+
 
         <article>
           <h1 class="count">Code Example</h1>
@@ -533,7 +536,8 @@ true </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
 true
 true
-true </pre><!-- wide-view --> </details><!--details CONSOLE -->
+true </pre><!-- wide-view -->
+          </details><!--details CONSOLE -->
 
         </article>
         <!--here-->
