fix syntax errors in errors_quiz

--- a/html/errors_quiz.html
+++ b/html/errors_quiz.html
@@ -181,7 +181,7 @@ For example
   console.log(a)
 
 1) Reference Error
-2) Synbtax Errror
+2) Syntax Errror
 3) Type Error 
 4) No Error</pre><!-- code-content -->
                     </details><!--details CODE-->
