update content in temporal_dead_zone.html

--- a/html/temporal_dead_zone.html
+++ b/html/temporal_dead_zone.html
@@ -99,7 +99,7 @@
                             a value of undefined
 
                         <li>
-                            This differs from var variables, which will return a value of undefined if they are accessed
+                            This differs from <code>var</code> variables, which will return a value of <code>undefined</code> if they are accessed
                             before they are declared
                         <li>
                             The term "temporal" is used because the zone depends on the order of execution (time) rather
