update formatting in type_error.html

--- a/html/type_error.html
+++ b/html/type_error.html
@@ -79,29 +79,30 @@
           <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="count">Introduction</h1>
           <ol>
-            <li>TypeError is a runtime error in JavaScript
-            <li>It occurs when an operation is performed on an existing value of an inappropriate type
+            <li><code>TypeError</code> is a runtime error in JavaScript
+            <li>It occurs when an operation is performed on an existing value of <strong>an inappropriate type</strong>
             <li>
-              In essence, TypeError is a runtime error that happens when you try to do something with a value that's not
+              In essence, <code>TypeError</code> is a runtime error that happens when you try to do something with a
+              value that's not
               of the
               right type for that operation — even though the syntax is valid
             <li>Common causes include trying to access properties of null or undefined, or calling a non-function as a
               function
             <li>
               It's JavaScript's way of saying: "I understand what you're asking, but this kind of value can't do that"
-            <li>TypeErrors can be caught and handled using try-catch blocks
+            <li><code>TypeErrors</code> can be caught and handled using try-catch blocks
           </ol>
         </article>
         <article>
           <h1 class="count">Key Points</h1>
           <ol>
             <li>
-              TypeError not a syntax error — the code is written correctly but fails while running.
+              <code>TypeError</code> is not a syntax error — the code is written correctly but fails while running.
             <li>
               Its about mismatched value types, not about incorrect spelling or missing variables (those are usually
               ReferenceErrors).
             <li>
-              The message after TypeError: usually tells you the exact problem.
+              The message after <code>TypeError:</code> usually tells you the exact problem.
           </ol>
         </article>
 
